Fix that long unwrapping content could overflow the card description

--- a/app/assets/stylesheets/cards.css
+++ b/app/assets/stylesheets/cards.css
@@ -157,6 +157,7 @@
 
   .card__content {
     flex: 2 1 auto;
+    max-inline-size: 100%;
   }
 
   .card__title {
